<resources>

    <string name="app_name">Generalized Edit Distance</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_ged">GED</string>
    <string name="lblDict">Dictionary:</string>
    <string name="btnShowDict">View dictionary</string>
    <string name="btnViewTransformations">Transformations</string>
    <string name="btnDictionaryInfo">Info</string>
    <string name="ctvSOExactMatch">Exact matches</string>
    <string name="ctvSObeginningMatch">Beginning matches</string>
    <string name="ctvSOmiddleMatch">Middle matches</string>
    <string name="ctvSOendingMatch">Ending matches</string>
    <string name="ctvSOcaseSensitive">Case sensitive</string>
    <string name="btnSearchOptions">Set search options</string>
    <string name="btnSOOk">OK</string>
    <string name="btnSOCancel">Cancel</string>
    <string name="lblMaxEditDistance">MaxED:</string>
    <string name="lblBest">Best:</string>
    <string name="lblSearchTerm">Word:</string>
    <string name="txtMaxEditDistanceDefaultValue">0.5</string>
    <string name="txtBestDefaultValue">10</string>
    <string name="txtSearchTermHint">Search term</string>
    <string name="btnStartSearch">I\'m feeling lucky!</string>

</resources>